<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Závody</string>
    <string name="bt_ok">Potvrdit</string>
    <string name="bt_storno">Zrušit</string>
    
    <!-- MainActivity -->
    <string name="ma_maps">Mapy</string>
    <string name="ma_friends">Přátelé</string>
    <string name="ma_settings">Nastavení</string>
    <string name="ma_coordinate">Souřadnice</string>
    <string name="ma_blind">Blind mode</string>
    <string name="ma_new_race">Nový závod</string>
    <string name="ma_help">Nápověda</string>
    
    <!-- SettingsActivity -->
    <string name="sa_first_option">První volba</string>
    <string name="sa_second_option">Druhá volba</string>
    <string name="sa_normal_mode">Běžný mód</string>
    <string name="sa_blind_mode">Mód naslepo</string>
    
    <!-- FriendsActivity -->
    <string name="fa_add_friend">Přidat přítele</string>
    <string name="fa_choose_friend">Zvolte ze seznamu</string>

    <!-- MapSelectCoordinates -->
    <string name="msc_wantSelect">Chcete vybrat</string>
    <string name="msc_point">Chcete vybrat tento bod:</string>
    
    <!-- RaceActivity -->
    <string name="race_title">Nový závod</string>
    <string name="race_choose_oponnent">Vybrat soupeře</string>
    <string name="race_choose_destination">Vybrat cíl závodu</string>
    <string name="race_choose_mode">Vybrat mód závodu</string>
    <string name="race_choose_bet">Nastavit sázku</string>
    <string name="race_start">Odstartovat</string>
    
    <!-- PickerDialog -->
    <string name="picker_dialog_title">Nastavit sázku</string>
    <string name="picker_dialog_unit">$</string>
    <string name="picker_dialog_bet">Sázka</string>
    
    <!--help-->
    <string name="help">
        <b>Závody</b>\n
        Závody je aplikace, která umožnuje závodit mezi práteli. \n
        Pravidla závodu jsou jednoduchá. Uživatelé vyberou cílový bod a mód závodu. Poté nastaví sázku o kterou poběží.
        Vyhrává ten kdo se přiblíží jako první k vybranému cíli závodu na vzdálenost 15m.\n
        Tyto závody mohou probíhat ve dvou módech.\n
        <b>Normalní mód</b> probíhá pomocí mapy. Na této mapě vidí jak soupeře, tak cíl závodu.\n
        <b>Blind mód</b> neboli slepý mód. V tomto módu má uživatel k dispozici pouze šipku, která mu ukazuje, kde se cíl závodu nachází.\n
        Aplikace vznikla jako prototyp do předmětu NUR na fakultě FEL ČVUT.\n
        Aplikaci vytvořili:\n Ondřej Šatera\nTomáš Poledný
    </string>
</resources>
