<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:id="@+id/ma_layout"
>
    <Button
        android:id="@+id/ma_button00"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ma_new_race"
/>
    <Button
        android:id="@+id/ma_button02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ma_friends"
/>
    <Button
        android:id="@+id/ma_button03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ma_settings"
/>
    
    <Button
        android:id="@+id/ma_help"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ma_help"
/>
</LinearLayout>

