<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:scrollbars="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
    >

    
    
        <Button
            android:id="@+id/race_button01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_choose_oponnent"
        />
        <Button
            android:id="@+id/race_button02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_choose_destination"
        />
        <Button
            android:id="@+id/race_button03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_choose_mode"
        />
        <Button
            android:id="@+id/race_button04"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_choose_bet"
        />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        >
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip" >
 
                <TextView
                    android:text="Soupeř:"
                    android:paddingRight="5dip"
                    android:textStyle="bold"
            />
 
                <TextView
                    android:id="@+id/sum_opponent"
                     
                    android:text="-"
             />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip" >
 
                <TextView
                    android:text="Cíl:"
                    android:textStyle="bold"
                    android:paddingRight="5dip"
            />
 
                <TextView
                    android:id="@+id/sum_finish"
                     
                    android:text="-"
             />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip" >
 
                <TextView
                    android:text="Mód:"
                    android:paddingRight="5dip"
                    android:textStyle="bold"
            />
 
                <TextView
                    android:id="@+id/sum_mode"
                     
                    android:text="-"
             />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip" >
 
                <TextView
                    android:text="Sázka:"
                    android:paddingRight="5dip"
                    android:textStyle="bold"
            />
 
                <TextView
                    android:id="@+id/sum_bet"
                     
                    android:text="-"
             />
            </TableRow>
        
        </TableLayout>
        <Button
            android:id="@+id/race_button05"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_start"
            android:drawableLeft="@drawable/ic_menu_mark"
            android:onClick="startRace"
            android:enabled="false"
            android:layout_marginTop="30sp"        
        />

    </LinearLayout>
</ScrollView>